# svo_edgelet

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  LICENSE  README.md
include/: _modelest.h  five-point.hpp  precomp.hpp  trajectorydrawer3d.h
include/svo/: blender_utils.h  camera_model.h  debug.h  depth_filter.h  fast.h  feature.h  feature_detection.h  frame.h  frame_handler_base.h  frame_handler_mono.h  global.h  homography.h  homography.h~  initialization.h  map.h  matcher.h  math_lib.h  patch_score.h  pinhole_camera.h~  point.h  pose_optimizer.h  reprojector.h  ringbuffer.h  robust_cost.h  slamviewer.h  sparse_align.h  sparse_img_align.h  trajectorydrawer3d.h~
src/: bundle_adjustment.cpp  camera_model.cpp  client.cpp  config.cpp  debug.cpp  depth_filter.cpp  fast_10.cpp  fast_10_score.cpp  fast_dect.cpp  fast_nonmax_3x3.cpp  faster_corner_10_sse.cpp  feature_alignment.cpp  feature_based.cpp  feature_detection.cpp  five-point.cpp  frame.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  homography.cpp  initialization.cpp  map.cpp  matcher.cpp  math_utils.cpp  modelest.cpp  point.cpp  pose_optimizer.cpp  reprojector.cpp  robust_cost.cpp  slamviewer.cpp  sparse_align.cpp  sparse_img_align.cpp
test/: test_live_vo.cpp  test_pipel_euroc.cpp  test_pipeline.cpp  test_video_vo.cpp
